--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
         <div class="page-wrapper">
             <div class="content container-fluid">
                 <div class="row">
+                    {% if request.user.is_hr %}
                     
                     <div class="col-md-6 col-sm-6 col-lg-3">
                         <div class="dash-widget dash-widget5">
@@ -34,6 +35,39 @@
                             </div>
                         </div>
                     </div>
+                    {% else %}
+                    <h4>You are logged in as {{first_name | title}} {{last_name | title}} </h4>
+                    <div class="col-md-6 col-sm-6 col-lg-3">
+                        <div class="dash-widget dash-widget5">
+                            <span class="dash-widget-icon bg-info"><i class="fa fa-calendar-o" aria-hidden="true"></i></span>
+                            <div class="dash-widget-info">
+                                <span>Date</span>
+                                <h4>{{my_day}}</h4>
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-lg-3">
+                        <div class="dash-widget dash-widget5">
+                            <span class="dash-widget-icon bg-info"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
+                            <div class="dash-widget-info">
+                                <h4>{{my_overtime_hours}}</h4>
+                                <span>My Active Hours</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-sm-6 col-lg-3">
+                        <div class="dash-widget dash-widget5">
+                            <span class="dash-widget-icon bg-success"><i class="fa fa-money" aria-hidden="true"></i></span>
+                            <div class="dash-widget-info">
+                                <h4>Kes {{my_total_overtime}}</h4>
+                                <span>Total Overtime</span>
+                            </div>
+                        </div>
+                    </div>
+                     
+                    {% endif %}
                 </div>
                    
                 <div class="row">
