--- a/templates/index.html
+++ b/templates/index.html
@@ -35,42 +35,7 @@
                             </div>
                         </div>
                     </div>
-                    {% else %}
-                    <h4>You are logged in as {{first_name | title}} {{last_name | title}} </h4>
-                    <div class="col-md-6 col-sm-6 col-lg-3">
-                        <div class="dash-widget dash-widget5">
-                            <span class="dash-widget-icon bg-info"><i class="fa fa-calendar-o" aria-hidden="true"></i></span>
-                            <div class="dash-widget-info">
-                                <span>Date</span>
-                                <h4>{{my_day}}</h4>
-                                
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-lg-3">
-                        <div class="dash-widget dash-widget5">
-                            <span class="dash-widget-icon bg-info"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
-                            <div class="dash-widget-info">
-                                <h4>{{my_overtime_hours}}</h4>
-                                <span>My Active Hours</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 col-sm-6 col-lg-3">
-                        <div class="dash-widget dash-widget5">
-                            <span class="dash-widget-icon bg-success"><i class="fa fa-money" aria-hidden="true"></i></span>
-                            <div class="dash-widget-info">
-                                <h4>Kes {{my_total_overtime}}</h4>
-                                <span>Total Overtime</span>
-                            </div>
-                        </div>
-                    </div>
-                     
-                    {% endif %}
-                </div>
-                   
-                <div class="row">
+                    <div class="row">
                     <div class="col-sm-6">
                         <div class="panel task-panel">
                             <div class="panel-heading">
@@ -115,6 +80,87 @@
                             </div>
                         </div>
                     </div>
+                
+                    {% else %}
+                    <h4>You are logged in as {{first_name | title}} {{last_name | title}} </h4>
+                    <div class="col-md-6 col-sm-6 col-lg-3">
+                        <div class="dash-widget dash-widget5">
+                            <span class="dash-widget-icon bg-info"><i class="fa fa-calendar-o" aria-hidden="true"></i></span>
+                            <div class="dash-widget-info">
+                                <span>Date</span>
+                                <h4>{{my_day}}</h4>
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-lg-3">
+                        <div class="dash-widget dash-widget5">
+                            <span class="dash-widget-icon bg-info"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
+                            <div class="dash-widget-info">
+                                <h4>{{my_overtime_hours}}</h4>
+                                <span>My Active Hours</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-sm-6 col-lg-3">
+                        <div class="dash-widget dash-widget5">
+                            <span class="dash-widget-icon bg-success"><i class="fa fa-money" aria-hidden="true"></i></span>
+                            <div class="dash-widget-info">
+                                <h4>Kes {{my_total_overtime}}</h4>
+                                <span>Day Earnings</span>
+                            </div>
+                        </div>
+                    </div>
+                      <div class="col-md-6 col-sm-6 col-lg-3">
+                        <div class="dash-widget dash-widget5">
+                            <span class="dash-widget-icon bg-success"><i class="fa fa-usd" aria-hidden="true"></i></span>
+                            <div class="dash-widget-info">
+                                <h4 style="color:orangered">Kes {{total_earnings}}</h4>
+                                <h5>Total Overtime Earnings</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h3> Previous Overtime Records </h3>
+                </div>
+                   <div class="row">
+                    <div class="col-md-12">
+                        <div class="table-responsive">
+                            <table class="table table-striped custom-table datatable">
+                                <thead>
+                                    <tr>
+                                        <th style="width:30%;">#</th>
+                                        <th>Overtime Date</th>
+                                        <th>Overtime Hours</th>
+                                        <th>Description</th>
+                                        <th>Hourly Rate (Kes)</th>
+                                        <th>Total (Kes)</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for Ot in overtime %}
+                                    <tr>
+                                        <td>
+                                            
+                                            <h2>{{ forloop.counter }}</h2>
+                                        </td>
+                                        <td>{{Ot.overtime_date}}</td>
+                                        <td>{{Ot.overtime_hours}}</td>
+                                        <td>{{Ot.description}}</td>
+                                        <td>{{Ot.overtime_pay}}</td>
+                                        <td>{{Ot.total}}</td>
+                                        <td>
+                                        
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+
+                                    </tbody>
+            </div>
+            {% endif %}
+                
+                   
                 
             
        
