--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,9 @@
                     <ul class="dropdown-menu">
                         <li><a href="#">My Profile</a></li>
                         <li><a href="#">Edit Profile</a></li>
+                        {% if request.user.is_hr %}
                         <li><a href="{% url 'settings'%}">Settings</a></li>
+                        {% endif %}
                         <li><a href="{% url 'logout' %}">Logout</a></li>
                     </ul>
                 </li>
@@ -67,7 +69,9 @@
                 <ul class="dropdown-menu pull-right">
                     <li><a href="#">My Profile</a></li>
                     <li><a href="#">Edit Profile</a></li>
+                    {% if request.user.is_hr %}
                     <li><a href="{% url 'settings' %}">Settings</a></li>
+                    {% endif %}
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
             </div>
